added a placeholder to enable me clone the folder structure in another machine

--- a/.gitignore
+++ b/.gitignore
@@ -129,8 +129,9 @@ dmypy.json
 .pyre/ 
 
 # hide some unrelated items
-fakenews/
+
 contract/
-data/
+data/METU/
+data/LogosInTheWild-V2/
 resources/
 logohunter/
