--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ verify_ssl = true
 
 [packages]
 requests = "*"
-opencv-python = "*"
+flask = "*"
+jsonpickle = "*"
 
 [requires]
 python_version = "3.8"
