added the feature extraction and brand matching code

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flask = "*"
 jsonpickle = "*"
 flask-images = "*"
 pandas = "*"
+tensorflow = "*"
+sklearn = "*"
 
 [requires]
 python_version = "3.8"
