integrated the feature extractor and brand matching into the main app.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\melli\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
+    "python.pythonPath": "C:\\Users\\melli\\.virtualenvs\\insight-Sb57AEvo\\Scripts\\python.exe",
     "git.ignoreLimitWarning": true
 }
